--- a/admin/css/common.css
+++ b/admin/css/common.css
@@ -1,34 +1,33 @@
 :root{
-    --teal: #2ec1ac;
-    --teal_hover: #279e8c;
+    --teal:#2ec1ac;
+    --teal_hover:#279e8c;
 }
+
 
 *{
-    font-family: 'Poppins', sans-serif;
+    font-family: "Poppins", sans-serif;
+}
+.h-font {
+    font-family: "Merienda", cursive;
 }
 
-.h-font{
-    font-family: 'Merienda', cursive;
-}
-
-input::-webkit-outer-spin-button,
-input::-webkit-inner-spin-button {
+input::-webkit-outer-spin-button,input::-webkit-inner-spin-button {
     -webkit-appearance: none;
     margin: 0;
 }
 
 input[type=number] {
-   -moz-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
 }
 
-.custom-bg{
+.custom-bg {
     background-color: var(--teal);
-    border: 1px solid var(--teal);
+    border: 1px solid var(--teal_hover);
 }
-
-.custom-bg:hover{
+.custom-bg:hover {
     background-color: var(--teal_hover);
-    border-color: var(--teal_hover);
+    border-color:var(--teal_hover);
 }
 
 .h-line{
@@ -39,7 +38,24 @@ input[type=number] {
 
 .custom-alert {
     position: fixed;
+
     top: 80px;
     right: 25px;
-    z-index: 9999;
 }
+
+#dashboard-menu{
+    position: fixed;
+    height: 100%;
+    z-index: 11;
+}
+
+@media screen and (max-width: 991px){
+    #dashboard-menu{
+    width : 100%;
+    height: auto
+ }
+#main-content{
+    margin-top: 60px;
+  }
+} 
+
